# tool-engrams

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  TODO-open-source.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: tests.yml
docs/: design-v10.md  design-v8.md  design-v9.md  design.md  prd-open-source-release.md
docs/adr/: 0001-watchers-evaluate-via-cli-not-schema.md  0002-drop-recency-from-ranking.md  0003-rich-dependency-for-monitor.md  0004-plugin-packaging.md  0005-stateless-watcher-ticks.md  0006-same-session-suppression.md  0007-eval-quarantine.md  0008-neutral-data-home.md  0009-target-seam.md  0010-codex-engine-containment.md  0011-consolidation-catchup.md  0012-config-file.md  0013-counters-from-surfaces.md  0014-formation-similarity-gate.md
experiments/: harness.py  run_lifecycle.py
install/engines/: claude-code.sh  codex.sh
install/targets/: claude-code.sh  codex.sh
memctl/: __init__.py  __main__.py  db.py  extract.py  rank.py  schema.sql
memctl/commands/: __init__.py  post_failure.py  pretool.py  seed.py  session_start.py  user_prompt.py
plugin/: bootstrap.sh  hook.sh
skills/engram-forget/: SKILL.md
skills/engram-recall/: SKILL.md
skills/engram-remember/: SKILL.md
skills/forget/: SKILL.md
skills/recall/: SKILL.md
skills/remember/: SKILL.md
tests/: conftest.py  test_associations.py  test_claude_invoke.py  test_collect_sessions.py  test_config.py  test_consolidate_metrics_parser.py  test_consolidate_recommendations_parser.py  test_consolidate_runs_prune.py  test_consolidation.py  test_consolidation_recommendations.py  test_consolidation_retry.py  test_consolidation_runs.py  test_counter_rebuild.py  test_dashboard_recommendations.py  test_db.py  test_doctor.py  test_double_install_warning.py  test_edit.py  test_engine_claude_code.py  test_engine_codex.py  test_engine_selection.py  test_extract.py  test_extract_compound_expansion.py  test_extract_compound_split.py  test_failure_reinforcement.py  test_forget.py  test_formation.py  test_hook_shim.py  test_hooks_cap.py  test_hooks_skip.py  test_install_sh.py  test_judge.py  test_main_verb_guard.py  test_mark_noise.py  test_memory_store.py  test_memory_summary_order.py  test_migrate_v1_to_v2.py  test_migrations_v10.py  test_migrations_v12.py  test_migrations_v13.py  (+57 more)
tests/e2e/: conftest.py  test_codex_cli.py  test_deny_e2e.py  test_post_failure_e2e.py  test_pretool_e2e.py  test_pretool_variations_e2e.py  test_session_start_e2e.py  (+1 more)
toolengrams/: __init__.py  __main__.py  associations.py  claude_invoke.py  config.py  db.py  dedup.py  envvars.py  extract.py  formation.py  harness_names.py  memory_store.py  models.py  observe.py  paths.py  pause.py  queries.py  rank.py  schedule.py  schema.sql  stopwords.py  subprocess_utils.py  transcript.py  triggers.py  utils.py  watcher.py
(+119 files in other folders)
