[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toolengrams"
version = "0.1.0"
description = "ToolEngrams — tool-bound automatic memory recall for Claude Code"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Juan Pablo Carranza Hurtado" }]
# The hot path (hooks) is stdlib + sqlite3 only. `rich` is used solely by the
# `engram monitor` dashboard and is imported lazily there (see ADR-0003).
dependencies = ["rich>=13"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
engram = "toolengrams.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["toolengrams*"]

[tool.setuptools.package-data]
"toolengrams" = ["schema.sql", "migrations/*.sql", "prompts/defaults/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that invoke `claude -p` (slow, cost money, skipped by default)",
    "e2e_codex: end-to-end tests that invoke the codex CLI (slow, cost money, skipped by default)",
]
# Default to not running e2e tests unless explicitly requested.
addopts = "-m 'not e2e and not e2e_codex'"
